# backEnd/docs/swagger.yaml
@@ -129,6 +129,79 @@ paths:
       summary: Get all products
       tags:
       - Products
+  /WishList/add-wishList{productID}:
+    post:
+      consumes:
+      - application/json
+      description: Adds a product to the authenticated user's wishlist
+      parameters:
+      - description: Product ID
+        in: path
+        name: productID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product successfully added to wishlist
+        "401":
+          description: Unauthorized - Token missing or invalid
+        "404":
+          description: Product not found
+        "500":
+          description: Internal server error
+      security:
+      - BearerAuth: []
+      summary: Add product to user's wishlist
+      tags:
+      - wishlist
+  /WishList/get-wishList:
+    get:
+      consumes:
+      - application/json
+      description: Fetches the authenticated user's wishlist
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Wishlist successfully fetched
+        "401":
+          description: Unauthorized - Token missing or invalid
+        "500":
+          description: Internal server error
+      security:
+      - BearerAuth: []
+      summary: Get user's wishlist
+      tags:
+      - wishlist
+  /WishList/remove-wishList{productID}:
+    delete:
+      consumes:
+      - application/json
+      description: Removes a product from the authenticated user's wishlist
+      parameters:
+      - description: Product ID
+        in: path
+        name: productID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product successfully removed from wishlist
+        "401":
+          description: Unauthorized - Token missing or invalid
+        "404":
+          description: Product not found in wishlist
+        "500":
+          description: Internal server error
+      security:
+      - BearerAuth: []
+      summary: Remove product from user's wishlist
+      tags:
+      - wishlist
 securityDefinitions:
   BearerAuth:
     in: header
